# reuben

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  bench-history.jsonl  eval-history.jsonl  rust-toolchain.toml  skills-lock.json
crates/reuben-contract/: Cargo.toml
crates/reuben-contract/src/: lib.rs  naming.rs
crates/reuben-core/: Cargo.toml
crates/reuben-core/benches/: README.md  macro_criterion.rs  macro_iai.rs  micro_criterion.rs  micro_iai.rs
crates/reuben-core/benches/common/: mod.rs
crates/reuben-core/benches/fixtures/: auto-filter.json  echo.json  reverb.json  sampler-arp.json
crates/reuben-core/benches/fixtures/voices/: autotune-voice.json  default-voice.json
crates/reuben-core/examples/: first_sound.rs  gen_schema.rs  gen_vocabulary.rs  guide_cut.rs  projection_coverage_proof.rs
crates/reuben-core/schema/: instrument.schema.json
crates/reuben-core/src/: bench_support.rs  boundary.rs  config.rs  context.rs  contract.rs  describe.rs  descriptor.rs  edit.rs  engine.rs  format.rs  graph.rs  guide.rs  harmony.rs  introspect.rs  lib.rs  message.rs  op_driver.rs  operator.rs  pitch.rs  plan.rs  projection.rs  registry.rs  render.rs  resources.rs  sample.rs  schema.rs  signal.rs  tools.rs  tuning.rs  vocabulary.rs  wavetable.rs
crates/reuben-core/src/coordinator/: mailbox.rs  manifest.rs  mod.rs  slot.rs  swap.rs  wire.rs
crates/reuben-core/src/dsp/: mod.rs  svf.rs
crates/reuben-core/src/edit/: tests.rs
crates/reuben-core/src/format/: mod.rs  normalize.rs
crates/reuben-core/src/operator/: shell.rs
crates/reuben-core/src/operators/: abs.rs  add.rs  ceil.rs  chord.rs  clamp.rs  clock.rs  compressor.rs  context.rs  delay.rs  differentiate.rs  div.rs  djfilter.rs  edge.rs  envelope.rs  euclid.rs  filter.rs  floor.rs  granulator.rs  harmony.rs  integrate.rs  lfo.rs  m2s.rs  map.rs  math.rs  math_test.rs  max.rs  min.rs  mod.rs  modulo.rs  mul.rs  negate.rs  noise.rs  osc_out.rs  oscillator.rs  output.rs  pan.rs  pipe.rs  pitch2freq.rs  pointwise.rs  power.rs  (+16 more)
crates/reuben-core/src/vocab/: harmony.rs  mod.rs  pitch.rs
crates/reuben-core/tests/: chord_player.rs  contract_port_types.rs  contract_shapes.rs  coordinator.rs  coordinator_rt_safe.rs  descriptor_golden.rs  echo_example.rs  first_sound.rs  format_v2.rs  format_v3.rs  format_v3_rewrite.rs  groovebox.rs  groovebox_snare_gate.rs  guide_lanes.rs  input_master.rs  install_slot.rs  install_slot_rt_safe.rs  instrument_format.rs  m2_swap_harness.rs  nesting.rs  no_dangling_references.rs  osc_out.rs  projection_golden.rs  resolution.rs  reverb_example.rs  rt_safe.rs  seed_recipes.rs  stereo_pan.rs  strum_harp.rs  tonal_context.rs  vibrato_example.rs  vocabulary.rs  voice_liveness.rs  voicer_tap.rs  wire_forms.rs
crates/reuben-core/tests/common/: mod.rs
crates/reuben-core/tests/fixtures/: autotune.json  good-button.json  metronome.json  nested-space.json  reverb.json  scale-demo.json  sequence.json  stereo-autopan.json
crates/reuben-core/tests/fixtures/patches/: space.json
crates/reuben-core/tests/fixtures/pre-recipes/: euclidean-drums.json  hat-voice.json  kick-voice.json  (+1 more)
crates/reuben-core/tests/golden/: descriptors.txt
crates/reuben-core/tests/rt_alloc/: mod.rs
crates/reuben-core/tests/swap_rt_safe/: mod.rs
crates/reuben-macros/: Cargo.toml
crates/reuben-macros/src/: argvalue.rs  grammar.rs  lib.rs  model.rs  number_op.rs  unpack.rs
crates/reuben-mcp/: Cargo.toml
crates/reuben-mcp/src/: client.rs  engine.rs  lib.rs  main.rs
crates/reuben-mcp/tests/: stdio_read_only_tools.rs  stdio_resources.rs  stdio_tools_list.rs  structure_client.rs
crates/reuben-native/: Cargo.toml
crates/reuben-native/examples/: gen_library_index.rs
crates/reuben-native/examples/prototype_set_input/: main.rs  set_input.rs
crates/reuben-native/schema/: device-profile.schema.json
crates/reuben-native/src/: audio.rs  cli.rs  diagnostics.rs  engine.rs  input.rs  lib.rs  library.rs  osc.rs  profile.rs  resources.rs  rigs.rs  scaffold.rs  structure.rs  test_support.rs
crates/reuben-native/tests/: cli.rs  library_index.rs  m1_fixtures.rs  nested_resolution.rs  sampler_example.rs  stereo_example.rs  structure_golden.rs  structure_server.rs
crates/reuben-native/tests/fixtures/: sampler-arp.json  sampler.json  stereo-sub.io-map.json  stereo-sub.json
crates/reuben-native/tests/golden/: get_diagnostics.ndjson  get_document.ndjson  ping.ndjson  swap_conflict.ndjson  swap_success.ndjson  swap_validation_failure.ndjson
crates/reuben-web/: .gitignore  Cargo.toml
crates/reuben-web/examples/: gen_tool_schemas.rs
crates/reuben-web/js/: .gitignore  agent-failure-eval.test.mjs  agent-host.mjs  agent-host.test.mjs  agent-policy-eval.test.mjs  agent-turn.mjs  agent-turn.test.mjs  chat-host.mjs  check.mjs  codec.mjs  codec.test.mjs  declick.mjs  declick.test.mjs  diff.mjs  diff.test.mjs  introspect.mjs  live-eval.mjs  loader.mjs  reuben-engine.mjs  share.mjs  share.test.mjs  tool-schemas.generated.json  tool-schemas.test.mjs  tools.mjs  tools.test.mjs  worklet.js
crates/reuben-web/js/surface/: gen-expected.mjs  infer.mjs  infer.test.mjs  render.mjs  render.test.mjs  widget-model.mjs  widget-model.test.mjs
crates/reuben-web/proxy/: KEY-ROTATION.md  README.md  cloudflare.mjs  cloudflare.test.mjs  config.mjs  config.test.mjs  relay.mjs  relay.test.mjs  system-prompt.mjs  system-prompt.test.mjs
crates/reuben-web/src/: bridge.rs  codec.rs  decode.rs  host_only_guard.rs  lib.rs  resolver.rs  shell.rs  tool_schema.rs
crates/reuben-web/web/: .gitignore  index.html  main.js
eval/: README.md  pyproject.toml
eval/reuben_eval/: gate.py  live.py  mcp.py  runner.py  tasks.py  workspace.py
eval/reuben_eval/tokenizer/: cl100k.py  pins.json  unicode_classes.py
eval/tests/: test_gate.py  test_tasks.py  test_tokenizer.py
eval/tools/: gen_unicode_classes.py
spikes/wasm-worklet/: .gitignore  Cargo.toml  README.md  build.sh  node-check.mjs
spikes/wasm-worklet/src/: lib.rs
spikes/wasm-worklet/web/: index.html  main.js  worklet.js
(+374 files in other folders)
