[workspace]
resolver = "2"
members = ["crates/reuben-core", "crates/reuben-native"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/Impractical-Instruments/reuben"

[workspace.dependencies]
slotmap = "1"
smallvec = "1"
hound = "3"
approx = "0.5"
# Instrument format (serde) — portable core authoring layer.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native layer (reuben-native) only.
cpal = "0.15"
rosc = "0.10"
