[workspace]
resolver = "2"
members = [
    "crates/reuben-contract",
    "crates/reuben-macros",
    "crates/reuben-core",
    "crates/reuben-native",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# MSRV — kept in lockstep with rust-toolchain.toml's `channel` (ADR-0023).
# Self-verified: CI runs on the pinned toolchain, which == this floor.
rust-version = "1.96.0"
license = "BSD-3-Clause"
repository = "https://github.com/Impractical-Instruments/reuben"

[workspace.dependencies]
slotmap = "1"
smallvec = "1"
# Compile-time operator self-registration (ADR-0024). linkme is the no_std fallback.
inventory = "0.3"
# Compile-time codegen: the operator_contract! proc-macro parses its own grammar (not Rust
# items/exprs); the ArgValue derive (ADR-0030) parses a type definition, which needs `derive`.
# Neither needs the heavy `full` expression AST.
syn = { version = "2", default-features = false, features = ["parsing", "printing", "proc-macro", "derive"] }
quote = "1"
proc-macro2 = "1"
hound = "3"
approx = "0.5"
# Instrument format (serde) — portable core authoring layer.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native layer (reuben-native) only.
cpal = "0.15"
rosc = "0.10"
clap = { version = "4", features = ["derive"] }
