[package]
name = "reuben-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-source operator contract: spec types, naming, and validation shared by the operator_contract! macro and the scaffold (ADR-0025)."

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
