[package]
name = "reuben-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable, OS-free realtime core for reuben: graph, plan, render."

[dependencies]
slotmap.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
hound.workspace = true

[[example]]
name = "first_sound"

[[example]]
name = "gen_schema"
