[package]
name = "reuben-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable, OS-free realtime core for reuben: graph, plan, render."

[dependencies]
slotmap.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true
inventory.workspace = true
# The operator_contract! macro: single-sources each operator's index consts + Descriptor (ADR-0025).
reuben-macros = { path = "../reuben-macros" }

[dev-dependencies]
approx.workspace = true
hound.workspace = true
# Perf infra (ADR-0019). criterion: local wall-clock. iai-callgrind: CI regression gate.
criterion = "0.8"
iai-callgrind = "0.16"

[[example]]
name = "first_sound"

[[example]]
name = "gen_schema"

# Macro render_block benches. `harness = false` — both bring their own main().
[[bench]]
name = "macro_criterion"
harness = false

[[bench]]
name = "macro_iai"
harness = false
