[package]
name = "reuben-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable, OS-free realtime core for reuben: graph, plan, render."

[features]
# Exposes `bench_support` (the per-operator micro-bench `Io` bridge, #30 / ADR-0019). Non-default
# so the bridge never ships in a normal build/publish; the micro `[[bench]]` targets below declare
# `required-features = ["bench"]`, and CI runs the micro layer + its forcing-function test with
# `--features bench` (locally: `cargo reuben-core-bench`, see .cargo/config.toml).
bench = []

[dependencies]
slotmap.workspace = true
smallvec.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
inventory.workspace = true
# The operator_contract! macro: single-sources each operator's index consts + Descriptor (ADR-0025).
reuben-macros = { path = "../reuben-macros" }
# The type-wide NUMBER_MIN/NUMBER_MAX sentinels (issue #127): interface pipes (ADR-0038) default
# their declared range to the same one definition the contract macro uses.
reuben-contract = { path = "../reuben-contract" }

[dev-dependencies]
approx.workspace = true
hound.workspace = true
# Perf infra (ADR-0019). criterion: local wall-clock. iai-callgrind: CI regression gate.
criterion = "0.8"
iai-callgrind = "0.16"

[[example]]
name = "first_sound"

[[example]]
name = "gen_schema"

# Macro render_block benches. `harness = false` — both bring their own main().
[[bench]]
name = "macro_criterion"
harness = false

[[bench]]
name = "macro_iai"
harness = false

# Per-operator micro benches (#30). `required-features = ["bench"]` ⇒ cargo SKIPS these (no error)
# unless the bridge feature is on, so a bare `cargo bench` runs only the macro layer while the full
# run (`cargo reuben-core-bench`) covers both. Same two layers as the macro set (ADR-0019).
[[bench]]
name = "micro_criterion"
harness = false
required-features = ["bench"]

[[bench]]
name = "micro_iai"
harness = false
required-features = ["bench"]
