[package]
name = "reuben-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP stdio sidecar for reuben: exposes the authoring tool roster over the Model Context Protocol."

# Both a bin (the shim the MCP client spawns per conversation) and a lib, so the server logic
# and the engine-liveness seam are unit-testable in-process while the integration test spawns
# the real binary over stdio.
[lib]
name = "reuben_mcp"
path = "src/lib.rs"

[[bin]]
name = "reuben-mcp"
path = "src/main.rs"

[dependencies]
# Pure introspection + the contract serde types. The `schemars`
# feature is ON here (and ONLY here) so rmcp can derive each tool's `outputSchema` from the
# reuben-core contract types; the play/CLI build keeps schemars fenced out.
reuben-core = { path = "../reuben-core", features = ["schemars"] }
# The filesystem resource resolver (`resources::FsResolver`) the pure describe/validate tools
# resolve through. That is the ONLY thing left of this dependency: control used to encode OSC here
# too, and now rides the structure channel instead.
reuben-native = { path = "../reuben-native" }
# stdio server only: `server` + `macros` for the tool router, `transport-io` for the stdio pipe.
# No HTTP/reqwest/streamable-http transport — the network stack stays out.
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
# current_thread async runtime; the exact feature set measured as sufficient.
tokio = { workspace = true, features = ["sync", "rt", "time", "io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
# JSON Schema derive for the tool input/output types — the same schemars the contract types use.
schemars = { workspace = true }
