# reuben-web — the WebAudio shell over the shared embed surface (issue #224, ADR-0039/0040).
#
# Deliberately NOT a workspace member: the empty [workspace] table below stops cargo from
# attaching this crate to the repo root's workspace, so `cargo test --workspace`, fmt --all,
# clippy --workspace, and the existing CI jobs are untouched by construction (the P1 spike's
# proven pattern, #223). A dedicated CI job builds it for wasm32-unknown-unknown and runs its
# host tests.

[package]
name = "reuben-web"
version = "0.0.0"
edition = "2021"
# Kept in lockstep with the workspace floor (ADR-0023) by hand — this crate is detached, so
# the root [workspace.package] inheritance can't reach it.
rust-version = "1.96.0"
publish = false
license = "BSD-3-Clause"

[lib]
# Raw C-ABI cdylib, no wasm-bindgen (ADR-0040): bindgen's generated JS glue assumes a
# Window/Worker global and fights AudioWorkletGlobalScope; the whole boundary here is a
# handful of flat exports + one `log` import. rlib so `cargo test` can host-test the logic.
crate-type = ["cdylib"]

[dependencies]
reuben-core = { path = "../reuben-core" }
# WAV decode from in-memory bytes (issue #224: hound-in-WASM v1) — the same decoder the
# native shell uses, behind the same ResourceResolver seam.
hound = "3"

# LOAD-BEARING: one codegen unit per crate. Operator registration is compile-time
# self-registration (`inventory`, ADR-0024): each operator plants a ctor in its own object
# file, and the linker only pulls an rlib's object files whose symbols are referenced — a
# CGU holding nothing but operator impls + their ctors gets silently dropped, and those
# operators "don't exist" at runtime (observed: 36 of 53 registered; `oscillator` gone).
# One CGU per crate makes reuben-core a single always-pulled object, so every ctor links.
# The P1 spike dodged this by CGU-partitioning luck, not by construction.
[profile.release]
codegen-units = 1

# Detach from the root workspace (see header comment).
[workspace]
